--- a/Web Page/css/index.css
+++ b/Web Page/css/index.css
@@ -43,7 +43,6 @@ nav ul li a {
 }
 
 main {
-  background-color: black;
   width: 100%;
   height: 600px;
   display: -ms-grid;
@@ -58,10 +57,13 @@ main {
 
 main textarea {
   resize: none;
+  background-color: rgba(45, 52, 54, 0.7);
+  padding: 5px;
 }
 
 main iframe {
   width: 100%;
   height: 100%;
+  background-color: rgba(45, 52, 54, 0.7);
 }
 /*# sourceMappingURL=index.css.map */
