--- a/Web Page/css/code.scss
+++ b/Web Page/css/code.scss
@@ -3,7 +3,7 @@
 
 $color1: #2d3436;
 $color2: rgba( $color1, .7 );
-$color3: #74b9ff;
+$color3: white;
 $nav-bg-color: lighten(black, 40%);
 $nav-color: darken(#636e72, 40%);
 $bg-color: adjust-hue($color: #636e72, $degrees: 0);
@@ -13,7 +13,7 @@ $space1: 10px;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 body {
@@ -46,64 +46,32 @@ nav {
             }
 
             current {
-
+                
             }
         }
     }
 }
 
 main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 600px;
     // background-color: black;
+    width: 100%;
+    height: 600px;
+    display: grid;
+    padding: 0 10px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 50px, 100%;
+    grid-gap: 50px;
 
-    section:nth-child(1) {
-        border-radius: 10px;
-        background-color: white;
-        width: 500px;
-        height: 400px;
-        display: grid;
-        margin: 0 5px;
-        justify-items: center;
-
-        input {
-            border-radius: 15px;
-            border: 2px solid $color3;
-            padding: 20px; 
-            width: 200px;
-            height: 50px;
-            
-        }
-
-        p {
-            font-family: 'Teko', sans-serif;
-        }
+    textarea {
+        resize: none;
+        background-color: $color2;
+        padding: 5px;
     }
 
-    section:nth-child(2) {
-        border-radius: 10px;
-        background-color: white;
-        width: 500px;
-        height: 400px;
-        display: grid;
-        margin: 0 5px;
-        justify-items: center;
-        
-        p {
-            font-family: 'Teko', sans-serif;
-            grid-row: 1;
-        }
-
-        input {
-            border-radius: 15px;
-            border: 2px solid $color3;
-            padding: 20px; 
-            width: 200px;
-            height: 50px;
-            
-        }
+    iframe {
+        width: 100%;
+        height: 100%;
+        background-color: $color2;
     }
 }
 
@@ -117,4 +85,3 @@ footer {
     align-items: center;
     font-family: 'Teko', sans-serif;
 }
-
