--- a/Web Page/css/projects.css
+++ b/Web Page/css/projects.css
@@ -43,64 +43,28 @@ nav ul li a {
 }
 
 main {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  width: 100%;
   height: 600px;
-}
-
-main section:nth-child(1) {
-  border-radius: 10px;
-  background-color: white;
-  width: 500px;
-  height: 400px;
   display: -ms-grid;
   display: grid;
-  margin: 0 5px;
-  justify-items: center;
+  padding: 0 10px;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  -ms-grid-rows: 50px, 100%;
+      grid-template-rows: 50px, 100%;
+  grid-gap: 50px;
 }
 
-main section:nth-child(1) input {
-  border-radius: 15px;
-  border: 2px solid #74b9ff;
-  padding: 20px;
-  width: 200px;
-  height: 50px;
+main textarea {
+  resize: none;
+  background-color: rgba(45, 52, 54, 0.7);
+  padding: 5px;
 }
 
-main section:nth-child(1) p {
-  font-family: 'Teko', sans-serif;
-}
-
-main section:nth-child(2) {
-  border-radius: 10px;
-  background-color: white;
-  width: 500px;
-  height: 400px;
-  display: -ms-grid;
-  display: grid;
-  margin: 0 5px;
-  justify-items: center;
-}
-
-main section:nth-child(2) p {
-  font-family: 'Teko', sans-serif;
-  -ms-grid-row: 1;
-  grid-row: 1;
-}
-
-main section:nth-child(2) input {
-  border-radius: 15px;
-  border: 2px solid #74b9ff;
-  padding: 20px;
-  width: 200px;
-  height: 50px;
+main iframe {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(45, 52, 54, 0.7);
 }
 
 footer {
@@ -119,4 +83,4 @@ footer {
           align-items: center;
   font-family: 'Teko', sans-serif;
 }
-/*# sourceMappingURL=index.css.map */
+/*# sourceMappingURL=projects.css.map */
