--- a/Web Page/css/index.css
+++ b/Web Page/css/index.css
@@ -63,6 +63,7 @@ main section:nth-child(1) {
   display: -ms-grid;
   display: grid;
   margin: 0 5px;
+  padding-top: 50px;
   justify-items: center;
 }
 
@@ -74,8 +75,19 @@ main section:nth-child(1) input {
   height: 50px;
 }
 
-main section:nth-child(1) p {
+main section:nth-child(1) p, main section:nth-child(1) button {
   font-family: 'Teko', sans-serif;
+}
+
+main section:nth-child(1) button {
+  border-radius: 15px;
+  border: 2px solid #74b9ff;
+  padding: 20px;
+  font-size: 25px;
+  line-height: 10px;
+  width: 200px;
+  height: 50px;
+  overflow: hidden;
 }
 
 main section:nth-child(2) {
@@ -86,13 +98,12 @@ main section:nth-child(2) {
   display: -ms-grid;
   display: grid;
   margin: 0 5px;
+  padding: 50px;
   justify-items: center;
 }
 
-main section:nth-child(2) p {
+main section:nth-child(2) p, main section:nth-child(2) button {
   font-family: 'Teko', sans-serif;
-  -ms-grid-row: 1;
-  grid-row: 1;
 }
 
 main section:nth-child(2) input {
@@ -101,6 +112,17 @@ main section:nth-child(2) input {
   padding: 20px;
   width: 200px;
   height: 50px;
+}
+
+main section:nth-child(2) button {
+  border-radius: 15px;
+  border: 2px solid #74b9ff;
+  padding: 20px;
+  font-size: 25px;
+  line-height: 10px;
+  width: 200px;
+  height: 50px;
+  overflow: hidden;
 }
 
 footer {
