--- a/Web Page/css/code.css
+++ b/Web Page/css/code.css
@@ -83,4 +83,7 @@ footer {
           align-items: center;
   font-family: 'Teko', sans-serif;
 }
+textarea {
+    color: #fff;
+}
 /*# sourceMappingURL=code.css.map */
