--- a/Web Page/css/index.css
+++ b/Web Page/css/index.css
@@ -127,6 +127,8 @@ main section:nth-child(2) button {
 
 footer {
   width: 100%;
+  bottom: 0;
+  position: fixed;
   background-color: #2d3436;
   height: 40px;
   padding-top: 10px;
