--- a/Web Page/css/projects.css
+++ b/Web Page/css/projects.css
@@ -69,6 +69,8 @@ main iframe {
 
 footer {
   width: 100%;
+    bottom: 0;
+    position: fixed;
   background-color: #2d3436;
   height: 40px;
   padding-top: 10px;
