--- a/Web Page/css/code.css
+++ b/Web Page/css/code.css
@@ -61,13 +61,14 @@ main {
 main textarea {
   resize: none;
   background-color: rgba(45, 52, 54, 0.7);
+  color: aliceblue;
   padding: 5px;
 }
 
 main iframe {
   width: 100%;
   height: 100%;
-  background-color: rgba(45, 52, 54, 0.7);
+  background-color: rgba(255, 255, 255,1.0);
 }
 
 main section {
