--- a/Web Page/css/index.css
+++ b/Web Page/css/index.css
@@ -63,7 +63,7 @@ main section:nth-child(1) {
   display: -ms-grid;
   display: grid;
   margin: 0 5px;
-  padding-top: 50px;
+  padding: 50px;
   justify-items: center;
 }
 
