--- a/Web Page/index.hbs
+++ b/Web Page/index.hbs
@@ -27,19 +27,22 @@
     <main>
         <section>
             <p>Welcome Back!</p>
-
-            <input id="login_username" placeholder="Username">
-            <input id="login_password" placeholder="Password">
-            <button>Log In</button>
+            <form method="GET" action="/login">
+                <input type="text" name="username" placeholder="Username">
+                <input type="text" name="username" placeholder="Password">
+                <input type="submit" value="Submit">
+            </form>
+            <p>{{error}}</p>
         </section>
         <section>
-            <p>
-                Register
-            </p>
-            <input id="register_username" placeholder="Username">
-            <input id="register_email" placeholder="Email">
-            <input id="register_password" placeholder="Password">
-            <button>Register</button>
+            <p>Register</p>
+                <form method="POST" action="/register">
+                    <input type="text" name="username" placeholder="Username" required>
+                    <input type="text" name="email" placeholder="Email" required>
+                    <input type="text" name="password" placeholder="Password" required>
+                    <input type="submit" value="Submit">
+                </form>
+            <p>{{success}}</p>
         </section>
     </main>
 
