--- a/Web Page/css/index.css
+++ b/Web Page/css/index.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Indie+Flower|Monoton|Orbitron|Permanent+Marker|Raleway|Teko");
 * {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
@@ -19,11 +19,11 @@ nav {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 nav ul {
@@ -47,11 +47,11 @@ main {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 600px;
 }
 
@@ -67,8 +67,15 @@ main section:nth-child(1) {
   justify-items: center;
 }
 
+main section:nth-child(1) form {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (1fr)[3];
+      grid-template-rows: repeat(3, 1fr);
+  justify-items: center;
+}
+
 main section:nth-child(1) input {
-  overflow-y: hidden;
   border-radius: 15px;
   border: 2px solid #74b9ff;
   padding: 20px;
@@ -76,11 +83,11 @@ main section:nth-child(1) input {
   height: 50px;
 }
 
-main section:nth-child(1) p, main section:nth-child(1) button {
+main section:nth-child(1) p, main section:nth-child(1) input {
   font-family: 'Teko', sans-serif;
 }
 
-main section:nth-child(1) button {
+main section:nth-child(1) input {
   border-radius: 15px;
   border: 2px solid #74b9ff;
   padding: 20px;
@@ -103,12 +110,19 @@ main section:nth-child(2) {
   justify-items: center;
 }
 
-main section:nth-child(2) p, main section:nth-child(2) button {
+main section:nth-child(2) form {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (1fr)[3];
+      grid-template-rows: repeat(3, 1fr);
+  justify-items: center;
+}
+
+main section:nth-child(2) p, main section:nth-child(2) input {
   font-family: 'Teko', sans-serif;
 }
 
 main section:nth-child(2) input {
-  overflow-y: hidden;
   border-radius: 15px;
   border: 2px solid #74b9ff;
   padding: 20px;
@@ -116,7 +130,7 @@ main section:nth-child(2) input {
   height: 50px;
 }
 
-main section:nth-child(2) button {
+main section:nth-child(2) input {
   border-radius: 15px;
   border: 2px solid #74b9ff;
   padding: 20px;
@@ -136,11 +150,11 @@ footer {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-family: 'Teko', sans-serif;
 }
 /*# sourceMappingURL=index.css.map */
