--- a/Web Page/partials/nav.hbs
+++ b/Web Page/partials/nav.hbs
@@ -1,10 +1,10 @@
     <nav>
         <ul>
             <li>
-                <a href="http://localhost:8080/">Home</a>
+                <a href="https://safe-badlands-66656.herokuapp.com/">Home</a>
             </li>
             <li>
-                <a href="http://localhost:8080/code">Code</a>
+                <a href="https://safe-badlands-66656.herokuapp.com/code">Code</a>
             </li>
 
         </ul>
