--- a/Web Page/index.hbs
+++ b/Web Page/index.hbs
@@ -16,7 +16,7 @@
             <p>Welcome Back!</p>
             <form method="POST" action="/login">
                 <input type="text" name="username" placeholder="Username">
-                <input type="text" name="password" placeholder="Password">
+                <input type="password" name="password" placeholder="Password">
                 <input type="submit" value="Submit">
             </form>
             <p>{{success_login}}</p>
@@ -25,8 +25,8 @@
             <p>Register</p>
                 <form method="POST" action="/register">
                     <input type="text" name="username" placeholder="Username" required>
-                    <input type="text" name="email" placeholder="Email" required>
-                    <input type="text" name="password" placeholder="Password" required>
+                    <input type="email" name="email" placeholder="Email" required>
+                    <input type="password" name="password" placeholder="Password" required>
                     <input type="submit" value="Submit">
                 </form>
             <p>{{success_register}}</p>
